# forensiq

./: .gitignore  Cargo.toml  README.md  pyproject.toml
analysis/: __init__.py  classification.py  entities.py  graph.py  models.py  timeline.py
api/: Cargo.toml
api/src/: auth.rs  main.rs  state.rs
api/src/handlers/: analysis.rs  audit.rs  cases.rs  evidence.rs  mod.rs  reports.rs
audit/: Cargo.toml
audit/src/: lib.rs
contradiction/: __init__.py  detector.py
docs/specs/: phase-6-report-generator.md
forensiq-ui/: audit-log.html  cases-active.html  cases-archived.html  contradictions.html  evidence.html  forensiq-ui.html  index.html  ingest.html  login.html  relationships.html  reports.html  timeline.html
forensiq-ui/css/: auth.js  base.css  sidebar.js
hardening/: benchmark.py  bias_test.py  security_audit.py
ingestion/: Cargo.toml
ingestion/src/: lib.rs  main.rs
pipeline/: rerun.py  results_db.py  runner.py
reasoning/: __init__.py  bayesian.py  scoring.py
report/: Cargo.toml
report/src/: lib.rs
store/: Cargo.toml  build.rs
store/src/: lib.rs
tests/: conftest.py  test_analysis.py  test_contradiction.py  test_reasoning.py
