[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forensiq-api"
path = "src/main.rs"

[dependencies]
ingestion  = { path = "../ingestion" }
audit      = { path = "../audit" }
store      = { path = "../store" }
report     = { path = "../report" }

axum         = { version = "0.7", features = ["multipart"] }
tokio        = { version = "1", features = ["full"] }
tower-http   = { version = "0.5", features = ["cors"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sqlx         = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
sha2         = "0.10"
hex          = "0.4"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait  = "0.1"
tempfile     = "3"
