[package]
name = "report"
version = "0.1.0"
edition = "2021"

[dependencies]
audit      = { path = "../audit" }
chrono     = { version = "0.4", features = ["serde"] }
hex        = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
sqlx       = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
thiserror  = "1"
tokio      = { version = "1", features = ["full"] }
uuid       = { version = "1", features = ["v4", "serde"] }

[lib]
name = "report"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
